<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_small"
    android:orientation="vertical"
    tools:context=".ui.PlaybackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_default">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonTogglePlayback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/spacing_default"
            android:paddingBottom="@dimen/spacing_default"
            android:src="@drawable/avd_play_stop"
            app:fabCustomSize="48dp"
            app:tint="@color/white" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_toEndOf="@id/buttonTogglePlayback" />

        <TextView
            android:id="@+id/tvProgress"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBar"
            android:layout_alignStart="@id/seekBar"
            android:layout_marginStart="@dimen/spacing_default"
            android:layout_marginTop="24dp"
            tools:text="00:00" />

        <TextView
            android:id="@+id/tvTotalDuration"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBar"
            android:layout_alignEnd="@id/seekBar"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/spacing_default"
            tools:text="16:11" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonDelete"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_small"
        android:text="@string/recordings_delete" />

</LinearLayout>
